--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Year Guessing Game</title>
+    <title>On This Daydle</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-    <h1>Year Guessing Game</h1>
+    <h1>On This Daydle</h1>
     <div id="game-description">
         <p>Guess the 4-digit year! You have 6 attempts. Each guess will give you feedback:</p>
     </div>
-<!-- Reset Button (Initially hidden) -->
-<button id="restart-button" style="display:none;">Restart Game</button>
+    <!-- Reset Button (Initially hidden) -->
+    <button id="restart-button" style="display:none;">Restart Game</button>
 
 
     <div id="game-board">
