Added the date at the top and fixed margins. Updated the website to be "Todaydle"

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <h1>On This Daydle</h1>
+    <h1>Todaydle</h1>
+    <div id="today-date"></div>
     <div id="game-description">
-        <p>Guess the 4-digit year of the historical event shown below. You have 6 attempts.</p>
+        <p>On this day in history, a significant event occurred. Can you guess which year it happened?</p>
         <div class="feedback-boxes">
             <div class="feedback-box correct">Correct</div>
             <div class="feedback-box close-10">Within 10</div>
